history card gap fixed

--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,6 @@ button {
 .card {
   width: 100%;
   height: 100%;
-  padding: 50px;
   justify-content: space-between;
   align-items: center;
   padding: 20px 30px;
@@ -184,6 +183,10 @@ button {
       rgba(255, 255, 255, 0.05) 99.85%);
   backdrop-filter: blur(5px);
   margin-bottom: 30px;
+}
+
+.card-title {
+  margin-bottom: 10px;
 }
 
 #modal-background {
